# dotm

./: .gitignore  .todo  .todo.md  Cargo.toml  Makefile  README.md  dotm  dotm.py  interface.md  pager.txt  requirements.txt
cli/: Cargo.toml
cli/src/: args.rs  config.rs  input.rs  main.rs  save.rs
core/: Cargo.toml
core/src/: config.rs  dotm.rs  lib.rs
ext/: core_dotm.py  is_valid.py  is_valid_dir.py  manage_config.py  manage_dotfiles_list.py
functions/: is_valid_path.py
gui/: Cargo.toml  package-lock.json  package.json
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
src/: app.rs  args.rs  backup.rs  config.rs  help.rs  input.rs  load.rs  main.rs  save.rs  ui.rs
