[package]
name = "dotm"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.core]
path = "../core/"

[dependencies]
colored = "2.0.0"
youchoose = "0.1.1"
whoami = "1.2.1"
clap = { version = "3.1.12", features = ["derive"] }
